--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,48 +1,22 @@
 {
     "version": "2.0.0",
     "tasks": [
-        {
-            "label": "Build C++ with bits/stdc++.h",
-            "type": "shell",
-            "command": "g++",
-            "args": [
-                "-std=c++17",
-                "-I",
-                "$HOME/bits",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": false
-            }
+      {
+        "label": "Build with clang++ and ~/bits/stdc++.h",
+        "type": "shell",
+        "command": "clang++",
+        "args": [
+            "-std=c++17",
+            "-I", "/Users/i_chae_yeon",       // 👈 이거 주의!
+            "${file}",
+            "-o",
+            "${fileDirname}/${fileBasenameNoExtension}"
+        ],
+        "group": {
+          "kind": "build",
+          "isDefault": true
         },
-        {
-            "type": "cppbuild",
-            "label": "C/C++: g++-14 활성 파일 빌드",
-            "command": "/opt/homebrew/bin/g++-14",
-            "args": [
-                "-std=c++17",
-                "-fdiagnostics-color=always",
-                "-g",
-                "-I",
-                "$HOME/bits",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "디버거에서 생성된 작업입니다."
-        }
+        "problemMatcher": ["$gcc"]
+      }
     ]
-}
+  }
